[tool.poetry]
name = "enlighten"
version = "0.1.0"
description = "Packages for the ENLIGHTEN program"
authors = ["j00t"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
